@@ -201,8 +201,6 @@ class TestResolveJobs(IntegrationTestCase):
         self.assertEqual(date(2016, 3, 15), sub_journal_pdf.document_date,
                          "End date should be set to dossier end date")
 
-        # object provides index needs to be up to date for dossier resolving
-        sub_journal_pdf.reindexObject(idxs=["object_provides"])
         with self.observe_children(self.empty_dossier) as main_children:
             with freeze(datetime(2016, 9, 1)):
                 resolve_dossier(self.empty_dossier, browser)
@@ -223,7 +221,6 @@ class TestResolveJobs(IntegrationTestCase):
             resolve_dossier(self.empty_dossier, browser)
         self.assertEquals(1, len(children['added']))
         journal_pdf, = children['added']
-        journal_pdf.reindexObject()
         self.assertEquals(0, journal_pdf.get_current_version_id(missing_as_zero=True))
 
         browser.open(self.empty_dossier, view='transition-reactivate', data={'_authenticator': createToken()})
