@@ -5,6 +5,7 @@ Changelog
 2019.1.2 (unreleased)
 ---------------------
 
+- Make sure task and journal PDFs object_provides index is up to date after resolving a dossier. [njohner]
 - Readd Office template files into Office Connector editable MIME types. [Rotonen]
 - Make sure end date is reindexed when resolving/reactivating a dossier. [njohner]
 - Readd Office macro files into Office Connector editable MIME types. [Rotonen]
